hphp/hack/test/typecheck/enum_stringish_bad_2.php.exp
ERROR: File "enum_stringish_bad_2.php", line 10, characters 10-11:
Invalid return type (Typing[4110])
  File "enum_stringish_bad_2.php", line 9, characters 22-30:
  Expected `Stringish`
  File "enum_stringish_bad_2.php", line 9, characters 15-15:
  But got `int`
  File "enum_stringish_bad_2.php", line 4, characters 16-18:
    by the definition of `E`
